--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,10 @@
     "react/react-in-jsx-scope": "off",
     "react/function-component-definition": "off",
     "import/no-dynamic-require": "off",
-    "global-require": "off"
+    "global-require": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/label-has-associated-control": "off",
+    "react/jsx-props-no-spreading": "off"
   }
 }
