--- a/.eslintrc
+++ b/.eslintrc
@@ -38,6 +38,7 @@
     "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/label-has-associated-control": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "default-param-last": "off"
   }
 }
