--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   },
   "homepage": "https://github.com/missirisshoi/react-gmp-2022q2#readme",
   "dependencies": {
+    "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
