--- a/.eslintrc
+++ b/.eslintrc
@@ -39,6 +39,7 @@
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "react/jsx-props-no-spreading": "off",
-    "default-param-last": "off"
+    "default-param-last": "off",
+    "no-nested-ternary": "off"
   }
 }
