--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
+    "plugin:cypress/recommended",
     "plugin:jsx-a11y/recommended",
     "plugin:react/jsx-runtime",
     "airbnb",
