--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "start": "webpack serve --node-env development",
     "build": "webpack --node-env production",
+    "cypress": "cypress open",
     "lint": "eslint --ext .js,.jsx ./src",
     "lint:fix": "eslint --fix --ext .js,.jsx ./src",
     "prettify:check": "prettier --check ./src",
@@ -45,9 +46,11 @@
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "cypress": "^10.6.0",
     "eslint": "^8.16.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^26.8.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
